Group header wrapping fix

--- a/less/custom/layout.less
+++ b/less/custom/layout.less
@@ -14,10 +14,22 @@ header {
 .lead {
   margin-bottom: 5px;
   padding-bottom: 5px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 
 }
 
 .search {
+  .checkbox-inline{
+    margin-bottom: 15px;
+  }
   .well.well-sm {
     border-top: none;
     padding-bottom: 10px;
